seccion tablets modificada para carga dinamica. estilos aplicados correctamente. script de carga dinamica actualizado

--- a/styles/catalogo.css
+++ b/styles/catalogo.css
@@ -154,6 +154,26 @@ div.card.desktop img{
     .seccion_tablet{
         display: block;
     }
+    #tarjetas_tablet{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .card{
+        width: 100%;
+    }
+    div.card.tablet{
+        min-width: 90%;
+    }
+    div.card .img_tablet{
+        max-height: 20rem;
+        max-width: 60%;
+        align-self: center;
+        margin: 1rem 1rem;
+        height: 12rem;
+        object-fit: cover
+    }
 }
 @media (min-width: 1024px) {
     .seccion_desktop{
